<resources>
    <string name="app_name">About Me</string>
    <string name="authorName">Name</string>
    <string name="authorimage">authorImage</string>
    <string name="bio">Hi, my name is Sunny Sahsi and I m a student of Patna University, India. I like to work on programming languages like C++, Java and Python.I am a student of Patna University, India. Patna University is a public state university of Bihar, India. It was established in 1922 as one of the oldest universities in North India. I am planning to apply for a graduate program in cyber security somewhere in America, Canada or Australia. My main interest is in the field of information security and network security, but I also have a background in computer engineering. Programming languages are the building blocks of code. They are used to create applications, websites and other computer programs. Programming languages like C++, Java and Python can be used to write all types of applications including games and GUIs (graphical user interfaces). I also do ethical hacking, meaning that I hack systems if they are open to vulnerability but with the permission of the owner of the system/network. Ethical hacking is a way of testing systems and networks for vulnerabilities before they are exposed to public use. It allows you to help secure your own network or companys systems from hackers by finding security holes in them and reporting them so they can be fixed before they become public knowledge.I also do web development including front end and back end.I have a strong knowledge of HTML5, CSS3, JavaScript and jQuery. I also have experience with PHP5 and MySQL databases as well as some experience with Postgresql databases. I am skilled in data management using tools such as R, Python or any other language you wish to use depending on your project requirements (e.g., Java).</string>
    <string name="done">DONE</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="editicon">editIcon</string>
</resources>