<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <TextView
                android:id="@+id/author_name"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/authorName"
                android:textAlignment="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/EditIcon"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginBottom="26dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/editicon"
                android:focusable="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/author_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/author_name"
                app:srcCompat="@drawable/edit"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <EditText
                android:id="@+id/enterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="Enter your name"
                android:ems="10"
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <Button
                android:id="@+id/doneButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/done"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/authorimage"
            app:srcCompat="@drawable/author" />

        <ScrollView
            android:id="@+id/bio_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/startPadding">

            <TextView
                android:id="@+id/bio_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/startPadding"
                android:text="@string/bio"
                android:textAlignment="center"
                android:textSize="25sp" />
        </ScrollView>
    </LinearLayout>
</layout>